--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "freebot",
-  "version": "2.0.0",
-  "description": "FreeBot Discord bot by LWJerri for everyone!",
-  "main": "./src/run.js",
-  "scripts": {
-    "start": "node ./src/run.js",
-    "dev": "nodemon"
-  },
-  "author": "LWJerri",
-  "license": "MIT",
-  "url": "https://github.com/LWJerri/FreeBot",
-  "dependencies": {
-    "discord.js": "^12.2.0",
-    "nodemon": "^2.0.4"
-  }
+    "name": "freebot",
+    "version": "2.0.0",
+    "description": "FreeBot Discord bot by LWJerri for everyone!",
+    "main": "./src/run.js",
+    "scripts": {
+        "start": "node ./src/run.js",
+        "dev": "nodemon"
+    },
+    "engines": {
+        "node": "12"
+    },
+    "author": "LWJerri (lwjerri.js.org)",
+    "license": "MIT",
+    "url": "https://github.com/LWJerri/FreeBot",
+    "dependencies": {
+        "discord.js": "^12.5.3",
+        "source-map-support": "^0.5.19"
+    },
+    "devDependencies": {
+        "@types/node": "^15.0.1",
+        "@types/source-map-support": "^0.5.3",
+        "nodemon": "^2.0.7",
+        "prettier": "^2.2.1",
+        "rimraf": "^3.0.2",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.2.4"
+    }
 }
