--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-	"bracketSpacing": true,
-	"semi": true,
-	"singleQuote": false,
-	"tabWidth": 4,
-	"arrowParens": "always"
+  "bracketSpacing": true,
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "arrowParens": "always",
+  "printWidth": 140
 }
